Fix Code Validation Mobile Layout (#9395)
* Fix code validation popup mobile layout

* Move popup lower down on the screen.

* Slightly more padding at the top, left-align buttons.

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -1027,4 +1027,36 @@
     .tutorial-title {
         max-width: 100%;
     }
+
+    /*******************************
+        Validation
+    *******************************/
+
+    .tutorial-validation-error-container {
+        max-width: unset;
+        min-width: unset;
+        right: 2.5%;
+        width: 95%;
+        bottom: 1rem;
+    }
+
+    .tutorial-validation-error-body {
+        padding: 1.2rem 1rem 1rem 1rem;
+    }
+
+    .tutorial-validation-error-emoji {
+        display: none;
+    }
+
+    .tutorial-validation-error-controls {
+        justify-content: left;
+
+        > .common-button {
+            padding: .8rem 0.8rem 0.8rem 0.25rem;
+        }
+    }
+
+    .tutorial-validation-error-close.common-button {
+        right: 0.3rem;
+    }
 }
